--- a/.github/workflows/race-results.yaml
+++ b/.github/workflows/race-results.yaml
@@ -2,12 +2,12 @@ name: Run script and commit results
 
 on:
   push:
-    paths:
-      - 'data/**'
+    # paths:
+    #   - 'data/**'
 
 jobs:
   build:
-    runs-on: ubuntu
+    runs-on: ubuntu-latest
 
     steps:
     - uses: actions/checkout@v2
