--- a/.github/workflows/race-results.yaml
+++ b/.github/workflows/race-results.yaml
@@ -21,9 +21,11 @@ jobs:
       run: python src/main.py
 
     - name: Commit and push changes
+      env:
+        GH_TOKEN: ${{ secrets.GITHUB_TOKEN }}
       run: |
         git config --global user.name 'GitHub Action'
         git config --global user.email 'action@github.com'
         git add results/*
         git commit -m "Update results" || exit 0
-        git push https://${{ secrets.GH_PAT }}@github.com/OsborneMotorsEnduranceChallenge/race-results.git main
+        git push origin main
