--- a/.github/workflows/race-results.yaml
+++ b/.github/workflows/race-results.yaml
@@ -11,6 +11,9 @@ jobs:
 
     steps:
     - uses: actions/checkout@v2
+      with:
+        token: ${{ secrets.GITHUB_TOKEN }} # Ensures you have access to push
+
 
     - name: Set up Python
       uses: actions/setup-python@v2
@@ -21,8 +24,6 @@ jobs:
       run: python src/main.py
 
     - name: Commit and push changes
-      env:
-        GH_TOKEN: ${{ secrets.GITHUB_TOKEN }}
       run: |
         git config --global user.name 'GitHub Action'
         git config --global user.email 'action@github.com'
