--- a/.github/workflows/race-results.yaml
+++ b/.github/workflows/race-results.yaml
@@ -28,5 +28,5 @@ jobs:
         git config --global user.name 'GitHub Action'
         git config --global user.email 'action@github.com'
         git add results/*
-        git commit -m "Update results" || exit 0
+        git commit -m "Update race results" || exit 0
         git push origin main
